--- a/Application/Admin/View/Cate/lst.html
+++ b/Application/Admin/View/Cate/lst.html
@@ -40,11 +40,11 @@
             </div>
         </div>
         <div class="result-wrap">
-            <form name="myform" id="myform" method="post">
+            <form name="myform" id="myform" action="__CONTROLLER__/sort" method="post">
                 <div class="result-title">
                     <div class="result-list">
                         <a href="__CONTROLLER__/add"><i class="icon-font"></i>新增栏目</a>
-                        <a id="updateOrd" href="javascript:void(0)"><i class="icon-font"></i>更新排序</a>
+                        <input class="btn btn-primary btn2" type="submit" value="更新排序" />
                     </div>
                 </div>
                 <div class="result-content">
@@ -52,24 +52,26 @@
                         <tr>
                             <th>排序</th>
                             <th>ID</th>
-                            <th>标题</th>
+                            <th>栏目名称</th>
                             <th>操作</th>
                         </tr>
-                        <tr>
-                            <td width="4%">
-                                <input name="ids[]" value="59" type="hidden">
-                                <input class="common-input sort-input" name="ord[]" value="0" type="text">
-                            </td>
-                            <td width="4%">59</td>
-                            <td title="发哥经典"><a target="_blank" href="#" title="发哥经典">发哥经典</a> … </td>
-                            <td width="10%">
-                                <a class="link-update" href="#">修改</a>
-                                <a class="link-del" href="#">删除</a>
-                            </td>
-                        </tr>
+
+                        <volist name="cates" id="cate">
+                            <tr>
+                                <td width="4%">
+                                    <input class="common-input sort-input" name="{$cate.id}" value="{$cate.sort}" type="text">
+                                </td>
+                                <td width="4%">{$cate.id}</td>
+                                <td title="{$cate.catename}"><a target="_blank" href="#" title="{$cate.catename}"> {$cate.catename} </a></td>
+                                <td width="10%">
+                                    <a class="link-update" href="#">修改</a>
+                                    <a class="link-del" href="#">删除</a>
+                                </td>
+                            </tr>
+                        </volist>
 
                     </table>
-                    <div class="list-page"> 1 条 1/1 页</div>
+                    <div class="list-page"></div>
                 </div>
             </form>
         </div>
