--- a/Application/Admin/View/Article/edit.html
+++ b/Application/Admin/View/Article/edit.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/common.css"/>
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/main.css"/>
     <script type="text/javascript" src="__PUBLIC__/js/libs/modernizr.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/ueditor/ueditor.config.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/ueditor/ueditor.all.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/ueditor/lang/zh-cn/zh-cn.js"></script>
 </head>
 <body>
 <include file="Public/head" />
@@ -21,26 +24,47 @@
         </div>
         <div class="result-wrap">
             <div class="result-content">
-                <form action="" method="post" id="myform" name="myform">
-                    <input type="hidden" name="id" value="{$link.id}">
+                <form action="" method="post" id="myform" name="myform" enctype="multipart/form-data"><!-- 添加附件必须 -->
+                    <input type="hidden" name="id" value="{$article.id}">
                     <table class="insert-tab" width="100%">
                         <tbody>
                         <tr>
                             <th><i class="require-red">*</i>文章名称：</th>
                             <td>
-                                <input class="common-text required" id="title" name="title" size="50" value="{$link.title}" type="text">
+                                <input class="common-text required" id="title" name="title" size="50" value="{$article.title}" type="text">
                             </td>
                         </tr>
                         <tr>
-                            <th><i class="require-red">*</i>文章地址：</th>
+                            <th>文章描述：</th>
                             <td>
-                                <input class="common-text required" id="url" name="url" size="50" value="{$link.url}" type="text">
+                                <textarea name="desp" style="width:600px; height:60px;">{$article.desp}</textarea>
                             </td>
                         </tr>
                         <tr>
-                            <th><i class="require-red">*</i>文章描述：</th>
+                            <th>缩略图：</th>
                             <td>
-                                <textarea name="desp" style="width:400px; height:100px;">{$link.desp}</textarea>
+                                <input id="pic" name="pic" size="50" value="" type="file">
+                                <if condition="$article['pic'] neq ''">
+                                    <img src="__ROOT__{$article.pic}" height="60">
+                                <else />
+                                    暂无缩略图
+                                </if>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th><i class="require-red">*</i>所属栏目：</th>
+                            <td>
+                                <select name="cateid">
+                                    <volist name="cates" id="cate">
+                                        <option <if condition="$cate['id'] eq $article['cateid']">selected="selected"</if> value="{$cate.id}">{$cate.catename}</option>
+                                    </volist>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th><i class="require-red">*</i>文章内容：</th>
+                            <td>
+                                <textarea id="content" name="content">{$article.content}</textarea>
                             </td>
                         </tr>
                         <tr>
@@ -59,5 +83,12 @@
     </div>
     <!--/main-->
 </div>
+
+<script type="text/javascript">
+    //实例化编辑器
+    //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
+    UE.getEditor('content',{initialFrameWidth:1500,initialFrameHeight:400,});
+</script>
+
 </body>
 </html>
