--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>『ThinkPHP』后台管理</title>
+    <title>后台管理</title>
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/common.css"/>
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/main.css"/>
     <script type="text/javascript" src="__PUBLIC__/js/libs/modernizr.min.js"></script>
