--- a/Application/Admin/View/Public/left.html
+++ b/Application/Admin/View/Public/left.html
@@ -10,7 +10,7 @@
                     <li><a href="__MODULE__/Article/lst"><i class="icon-font">&#xe005;</i>文章管理</a></li>
                     <li><a href="__MODULE__/Cate/lst"><i class="icon-font">&#xe006;</i>分类管理</a></li>
                     <li><a href="__MODULE__/Link/lst"><i class="icon-font">&#xe052;</i>友情链接</a></li>
-                    <li><a href=""><i class="icon-font">&#xe008;</i>管理员管理</a></li>
+                    <li><a href="__MODULE__/Admin/lst"><i class="icon-font">&#xe008;</i>管理员管理</a></li>
                 </ul>
             </li>
         </ul>
