--- a/Application/Admin/View/Login/login.html
+++ b/Application/Admin/View/Login/login.html
@@ -21,6 +21,12 @@
                         <input type="password" name="password" value="" id="password" size="35" class="admin_input_style" />
                     </li>
                     <li>
+                        <label for="verify">验证码：</label>
+                        <input type="text" name="verify" id="verify" size="10" class="admin_input_style" />
+                        <img src="__CONTROLLER__/verify" width="100" height="50" style="cursor: pointer;"
+                            onclick="this.src='__CONTROLLER__/verify/'+Math.random();">
+                    </li>
+                    <li>
                         <input type="submit" tabindex="3" value="提交" class="btn btn-primary" />
                     </li>
                 </ul>
