对前台html代码的一些修改；前台模块注释

--- a/Application/Home/View/Public/footer.html
+++ b/Application/Home/View/Public/footer.html
@@ -1,15 +1,8 @@
 <div class="footer">
     <div class="inner">
-        <div class="manage">
-            <a target="_blank" href="http://yispace.net/copyright">站内导航</a> |
-            <script type="text/javascript">
-                var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-                document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F99c2c06a529fc4c8787deb597141fe76' type='text/javascript'%3E%3C/script%3E"));
-            </script>
-        </div>
         <div class="copyright">
-            <a href="http://yispace.net">意空间阅读网</a>，版权所有 &copy; 2016 &nbsp;&nbsp;&nbsp;
-            <img src="http://www.weiweiqi.com/wp-content/themes/weiweiqi/img/beian.png"/>
+            <a href="http://www.d4smart.com">易水人去</a>，版权所有 &copy; 2016 &nbsp;&nbsp;&nbsp;
+            <img src="__PUBLIC__/images/beian.png"/>
             <a rel="nofollow" target="_blank" href="http://www.miitbeian.gov.cn">鄂ICP备16005158号</a>
         </div>
     </div>
