--- a/Application/Home/View/Public/head.html
+++ b/Application/Home/View/Public/head.html
@@ -1,9 +1,9 @@
 <div class="topbar">
     <div class="inner">
-        <h1 class="logo"><a href="http://yispace.net" title="意空间阅读网_美文网_美文欣赏_经典美文_励志文章_优美散文">意空间阅读网</a></h1>
+        <h1 class="logo"><a href="__APP__" title="蛤蛤">蛤蛤</a></h1>
         <ul class="nav">
             <volist name="cates" id="cate">
-                <li <if condition="$current eq $cate['id']">class="current-menu-item"</if>>
+                <li <if condition="$current eq $cate['id']">class="current-menu-item"</if> >
                     <a href="__MODULE__/Cate/index/id/{$cate.id}">{$cate.catename}</a>
                 </li>
             </volist>
@@ -11,7 +11,7 @@
 
         <ul class="nav topmenu">
             <li id="menu-item-12460" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-12460"><a
-                    href="http://yispace.net/contact">关于本站</a></li>
+                    href="__APP__/contact">关于本站</a></li>
         </ul>
     </div>
 </div>
