--- a/Application/Admin/View/Admin/lst.html
+++ b/Application/Admin/View/Admin/lst.html
@@ -17,11 +17,11 @@
     <div class="main-wrap">
 
         <div class="crumb-wrap">
-            <div class="crumb-list"><i class="icon-font"></i><a href="/jscss/admin">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">管理员管理</span></div>
+            <div class="crumb-list"><i class="icon-font"></i><a href="__MODULE__">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">管理员管理</span></div>
         </div>
         <div class="search-wrap">
             <div class="search-content">
-                <form action="/jscss/admin/design/index" method="post">
+                <form action="" method="post">
                     <table class="search-tab">
                         <tr>
                             <th width="120">选择分类:</th>
