--- a/Application/Admin/View/Article/edit.html
+++ b/Application/Admin/View/Article/edit.html
@@ -20,7 +20,7 @@
     <div class="main-wrap">
 
         <div class="crumb-wrap">
-            <div class="crumb-list"><i class="icon-font"></i><a href="/jscss/admin/design/">首页</a><span class="crumb-step">&gt;</span><a class="crumb-name" href="/jscss/admin/design/">文章管理</a><span class="crumb-step">&gt;</span><span>修改文章</span></div>
+            <div class="crumb-list"><i class="icon-font"></i><a href="__MODULE__">首页</a><span class="crumb-step">&gt;</span><a class="crumb-name" href="__MODULE__/Article/lst">文章管理</a><span class="crumb-step">&gt;</span><span>修改文章</span></div>
         </div>
         <div class="result-wrap">
             <div class="result-content">
