--- a/Application/Admin/View/Cate/add.html
+++ b/Application/Admin/View/Cate/add.html
@@ -17,7 +17,7 @@
     <div class="main-wrap">
 
         <div class="crumb-wrap">
-            <div class="crumb-list"><i class="icon-font"></i><a href="/jscss/admin/design/">首页</a><span class="crumb-step">&gt;</span><a class="crumb-name" href="/jscss/admin/design/">栏目管理</a><span class="crumb-step">&gt;</span><span>新增栏目</span></div>
+            <div class="crumb-list"><i class="icon-font"></i><a href="__MODULE__">首页</a><span class="crumb-step">&gt;</span><a class="crumb-name" href="__MODULE__/Cate/lst">栏目管理</a><span class="crumb-step">&gt;</span><span>新增栏目</span></div>
         </div>
         <div class="result-wrap">
             <div class="result-content">
