继续完善界面

--- a/Application/Home/View/Public/head.html
+++ b/Application/Home/View/Public/head.html
@@ -10,8 +10,8 @@
         </ul>
 
         <ul class="nav topmenu">
-            <li id="menu-item-12460" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-12460"><a
-                    href="__APP__/contact">关于本站</a></li>
+            <li><a href="__APP__/Admin/Login">管理员登陆</a></li>
+            <li><a href="__APP__">关于本站</a></li>
         </ul>
     </div>
 </div>
