--- a/Application/Admin/View/Public/left.html
+++ b/Application/Admin/View/Public/left.html
@@ -5,7 +5,7 @@
     <div class="sidebar-content">
         <ul class="sidebar-list">
             <li>
-                <a href="#"><i class="icon-font">&#xe003;</i>常用操作</a>
+                <a href=""><i class="icon-font">&#xe003;</i>常用操作</a>
                 <ul class="sub-menu">
                     <li><a href="__MODULE__/Article/lst"><i class="icon-font">&#xe005;</i>文章管理</a></li>
                     <li><a href="__MODULE__/Cate/lst"><i class="icon-font">&#xe006;</i>分类管理</a></li>
