网站logo，链接及分享修改

--- a/Application/Home/View/Article/index.html
+++ b/Application/Home/View/Article/index.html
@@ -38,6 +38,7 @@
             </p>
 
             <?php echo htmlspecialchars_decode($arts['content']);?>
+            <br><br>
         </div>
 
         <div>
@@ -60,7 +61,7 @@
         </div>
 
         <!-- 分享代码 -->
-        <div class="baidufenxiang" style="overflow:auto;"><!-- Baidu Button BEGIN -->
+        <div class="baidufenxiang" style="overflow:auto;margin-top:60px"><!-- Baidu Button BEGIN -->
             <div id="bdshare" class="bdshare_t bds_tools_32 get-codes-bdshare">
                 <a class="bds_bdhome"></a>
                 <a class="bds_renren"></a>
