--- a/Application/Home/View/Public/footer.html
+++ b/Application/Home/View/Public/footer.html
@@ -1,7 +1,7 @@
 <div class="footer">
     <div class="inner">
         <div class="copyright">
-            <a href="http://www.d4smart.com">易水人去</a>，版权所有 &copy; 2016 &nbsp;&nbsp;&nbsp;
+            <a href="http://www.d4smart.com">斯密特先生</a>，版权所有 &copy; 2016 &nbsp;&nbsp;&nbsp;
             <img src="__PUBLIC__/images/beian.png"/>
             <a rel="nofollow" target="_blank" href="http://www.miitbeian.gov.cn">鄂ICP备16005158号</a>
         </div>
