导出数据库

--- a/Application/Home/View/Public/right.html
+++ b/Application/Home/View/Public/right.html
@@ -1,6 +1,6 @@
 <div class="sidebar">
 
-    <div class="widget">
+    <div class="widget1">
         <h3 class="widget-tit">关于我</h3>
         <ul class="mypages">
             <li>
