--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -20,10 +20,10 @@
             </div>
             <div class="result-content">
                 <div class="short-wrap">
-                    <a href="__MODULE__/Article/add"><i class="icon-font">&#xe001;</i>新增文章</a>
-                    <a href="__MODULE__/Cate/add"><i class="icon-font">&#xe048;</i>新增分类</a>
-                    <a href="__MODULE__/Link/add"><i class="icon-font">&#xe041;</i>新增友情链接</a>
-                    <a href="__MODULE__/Admin/add"><i class="icon-font">&#xe01e;</i>新增管理员</a>
+                    <a href="__MODULE__/article/add"><i class="icon-font">&#xe001;</i>新增文章</a>
+                    <a href="__MODULE__/cate/add"><i class="icon-font">&#xe048;</i>新增分类</a>
+                    <a href="__MODULE__/link/add"><i class="icon-font">&#xe041;</i>新增友情链接</a>
+                    <a href="__MODULE__/admin/add"><i class="icon-font">&#xe01e;</i>新增管理员</a>
                 </div>
             </div>
         </div>
