--- a/Application/Admin/View/Public/head.html
+++ b/Application/Admin/View/Public/head.html
@@ -10,8 +10,8 @@
         <div class="top-info-wrap">
             <ul class="top-info-list clearfix">
                 <li><a href="">欢迎你，<?php echo $_SESSION['username'];?></a></li>
-                <li><a href="__MODULE__/Admin/edit/id/<?php echo $_SESSION['id'];?>">修改密码</a></li>
-                <li><a href="__MODULE__/Admin/logout">退出</a></li>
+                <li><a href="__MODULE__/user/edit/<?php echo $_SESSION['id'];?>">修改密码</a></li>
+                <li><a href="__MODULE__/user/logout">退出</a></li>
             </ul>
         </div>
     </div>
