文章列表筛选；登陆页面背景图

--- a/Application/Admin/View/Article/lst.html
+++ b/Application/Admin/View/Article/lst.html
@@ -19,6 +19,7 @@
         <div class="crumb-wrap">
             <div class="crumb-list"><i class="icon-font"></i><a href="__MODULE__">首页</a><span class="crumb-step">&gt;</span><span class="crumb-name">文章管理</span></div>
         </div>
+
         <div class="search-wrap">
             <div class="search-content">
                 <form action="" method="post">
@@ -26,19 +27,19 @@
                         <tr>
                             <th width="120">选择分类:</th>
                             <td>
-                                <select name="search-sort" id="haha">
-                                    <option value="">全部</option>
-                                    <option value="19">精品界面</option><option value="20">推荐界面</option>
+                                <select name="catename">
+                                    <volist name="cates" id="cate">
+                                        <option value="{$cate.catename}">{$cate.catename}</option>
+                                    </volist>
                                 </select>
                             </td>
-                            <th width="70">关键字:</th>
-                            <td><input class="common-text" placeholder="关键字" name="keywords" value="" id="" type="text"></td>
-                            <td><input class="btn btn-primary btn2" name="sub" value="查询" type="submit"></td>
+                            <td><input class="btn btn-primary btn2" value="查询" type="submit"></td>
                         </tr>
                     </table>
                 </form>
             </div>
         </div>
+
         <div class="result-wrap">
             <form name="myform" id="myform" action="__CONTROLLER__/sort" method="post">
                 <div class="result-title">
