--- a/Application/Admin/Public/css/admin_login.css
+++ b/Application/Admin/Public/css/admin_login.css
@@ -6,7 +6,7 @@
  * @info :  admin-css
  *******************************/
 *{margin:0;padding:0;}
-body{font:14px/1.5 '微软雅黑';background:#f9f9f9;}
+body{font:14px/1.5 '微软雅黑';background:#f9f9f9;background-image:url("../images/bg/bg3.jpg");}
 a{color:#00007F;text-decoration:none;}
 a:hover{color:#bd0a01;text-decoration:underline;}
 .admin_login_wrap{margin:140px auto 0;width:312px;}
