--- a/Application/Home/View/Article/index.html
+++ b/Application/Home/View/Article/index.html
@@ -37,7 +37,7 @@
                      sizes="(max-width: 630px) 100vw, 630px"/>
             </p>
 
-            <?php echo htmlspecialchars_decode($arts['content']);?>
+            <php>echo htmlspecialchars_decode($arts['content']);</php>
             <br><br>
         </div>
 
