添加详细的注释；添加文章；一些小改动

--- a/Application/Admin/View/Login/login.html
+++ b/Application/Admin/View/Login/login.html
@@ -8,6 +8,7 @@
 <body>
 <div class="admin_login_wrap">
     <h1 style="text-align: center">用户登录</h1>
+
     <div class="adming_login_border">
         <div class="admin_input">
             <form action="" method="post">
@@ -32,6 +33,11 @@
                 </ul>
             </form>
         </div>
+    </div>
+
+    <div>
+        <div class="left"><a href="__APP__">返回首页</a></div>
+        <div class="right"><a href="__APP__/Admin/register">注册</a></div>
     </div>
 </div>
 </body>
