--- a/Application/Home/View/Article/index.html
+++ b/Application/Home/View/Article/index.html
@@ -9,7 +9,7 @@
     <script src="__PUBLIC__/style/post.js"></script>
     <title>{$arts.title}</title>
 
-    <!-- 跳出 -->
+    <!-- 如果页面在框架里面，则跳出框架 -->
     <script type="text/javascript">
         if (top.location != self.location) {
             top.location = self.location
