--- a/Application/Home/View/Public/head.html
+++ b/Application/Home/View/Public/head.html
@@ -1,3 +1,4 @@
+<!-- 公共头部 -->
 <div class="topbar">
     <div class="inner">
         <h1 class="logo"><a href="__APP__" title="蛤蛤！">蛤蛤！</a></h1>
@@ -12,7 +13,7 @@
         <ul class="nav topmenu">
             <li><a href="__APP__/Admin/login">用户登陆</a></li>
             <li><a href="__APP__/Admin/register">用户注册</a></li>
-            <li><a href="__APP__" onclick="window.open('__PUBLIC__/images/weixin.png','','width=360,height=360');">关于我</a></li>
+            <li><a href="" onclick="window.open('__PUBLIC__/images/weixin.png','','width=360,height=360');">关于我</a></li>
         </ul>
     </div>
 </div>
