--- a/Application/Admin/Public/css/admin_login.css
+++ b/Application/Admin/Public/css/admin_login.css
@@ -11,7 +11,7 @@ a{color:#00007F;text-decoration:none;}
 a:hover{color:#bd0a01;text-decoration:underline;}
 .admin_login_wrap{margin:140px auto 0;width:312px;}
 .admin_login_wrap h1{font-family:'微软雅黑';font-weight: normal;font-size:28px;margin-bottom:32px;}
-.adming_login_border{box-shadow:1px 2px 3px #ccc;border:1px solid #eee;background:#fff;padding:0 5px 15px;overflow:hidden;}
+.adming_login_border{box-shadow:1px 2px 3px #ccc;border:1px solid #eee;background:#fff;padding:0 5px 15px;overflow:hidden;margin-bottom:32px;}
 .admin_input{margin:15px auto 0;width:280px;}
 .admin_items li{line-height:28px;margin-bottom: 5px;list-style:none;clear: both;}
 .admin_input label{display:block;margin-bottom:5px;}
@@ -30,3 +30,5 @@ a:hover{color:#bd0a01;text-decoration:underline;}
 .admin_copyright{color:#585858;margin-top:10px;font-family:Arial;text-align:center;}
 .admin_copyright a:link,.admin_copyright a:visited{color:#f90;}
 .admin_copyright a:hover{color:#f90;}
+.left{float:left}
+.right{float:right;}
