--- a/Application/Admin/View/Public/head.html
+++ b/Application/Admin/View/Public/head.html
@@ -1,3 +1,4 @@
+<!-- 后台公共头部 -->
 <div class="topbar-wrap white">
     <div class="topbar-inner clearfix">
         <div class="topbar-logo-wrap clearfix">
