--- a/Application/Admin/View/Register/register.html
+++ b/Application/Admin/View/Register/register.html
@@ -8,6 +8,7 @@
 <body>
 <div class="admin_login_wrap">
     <h1 style="text-align: center">用户注册</h1>
+
     <div class="adming_login_border">
         <div class="admin_input">
             <form action="" method="post">
@@ -21,6 +22,10 @@
                         <input type="password" name="password" value="" id="password" size="35" class="admin_input_style" />
                     </li>
                     <li>
+                        <label for="repassword">确认密码：</label>
+                        <input type="password" name="repassword" value="" id="repassword" size="35" class="admin_input_style" />
+                    </li>
+                    <li>
                         <label for="verify">验证码：</label>
                         <input type="text" name="verify" id="verify" size="10" class="admin_input_style" />
                         <img src="__CONTROLLER__/verify" width="100" height="50" style="cursor: pointer;"
@@ -32,6 +37,11 @@
                 </ul>
             </form>
         </div>
+    </div>
+
+    <div>
+        <div class="left"><a href="__APP__">返回首页</a></div>
+        <div class="right"><a href="__APP__/Admin/login">登陆</a></div>
     </div>
 </div>
 </body>
