--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -9,7 +9,7 @@
     <title>这是醉吼的</title>
     <meta name="keywords" content="易水人去，斯密特先生，d4smart,d4smarter"/>
 
-    <!-- 跳出 -->
+    <!-- 如果页面在框架里面，则跳出框架 -->
     <script type="text/javascript">
         if (top.location != self.location) {
             top.location = self.location
